1.99.17
- PEAR was updated to 1.5.0
- phpThumb was updated to 1.7.7

1.99.16
- masks icons are rendered only if not on handheld
- a bug with P4A_Tab_Pane height was solved
- tinyMCE was dropped due to the bugs with ajax environment
- FCKeditor 2.4.0 was introduced (no support for toolbar customization at the moment)
- P4A_APPLICATION_NAME rules were changes making easier to include P4A from outside
- _upload_path action wa added to the main action dispatcher thus now it's possible to retrieve upload path of p4a_fields from outsite
- the way of calling the FCKeditor file manager connector was changed, now the upload path is not passed anymore
- Scriptaculous was updated to 1.7.0
- Prototype was updated to 1.5.0
- onBlur(), onDblClick(), onFocus(), onMouseDown(), onMouseMove(), onMouseUp(), onSelect() methods were added to P4A_Widget
- a bug on date fields with onchange action was solved

1.99.15
- some more error messages were put in the code
- P4A_Mask::setIcon(), getIcon(), setIconSize and getIconSize() were added
- P4A_VERSION constant was added
- P4A::getVersion() method was added to retrieve P4A version used

1.99.14
- First Ajax Popup implementation
- P4A_MASK::isPopup() was added
- P4A_MASK::getAsString() was added
- P4A::openPopup() was added
- P4A::closePopup() was added
- popup.js was added
- popup.tpl was added
- beforeSetActivePage handler was added to P4A_Tab_Pane
- afterSetActivePage handler was added to P4A_Tab_Pane
- a bug in P4A_Collection::nextItem was fixed
- PEAR::Console_Getopt was updated to 1.2.1
- PEAR::Validate was updated to 0.7.0
- PEAR::MDB2 was updated to 2.3.0
- PEAR::MDB2_Driver_mysql was updated to 1.3.0
- PEAR::MDB2_Driver_mysqli was updated to 1.3.0
- PEAR::MDB2_Driver_oci8 was updated to 1.3.0
- PEAR::MDB2_Driver_pgsql was updated to 1.3.0
- PEAR::MDB2_Driver_sqlite was updated to 1.3.0
- if showPrevMask is called within a popup, the popup is closed