@@ -1,6 +1,7 @@
 1.99.17
 - PEAR was updated to 1.5.0
 - phpThumb was updated to 1.7.7
+- P4A_Table_Rows::disable() is now correctly handled
 
 1.99.16
 - masks icons are rendered only if not on handheld
